@@ -554,6 +554,9 @@
             <setting name="InhDefaultEnableDesktopComposition" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ConfirmCloseConnection" serializeAs="String">
+                <value>True</value>
+            </setting>
         </mRemoteNG.My.MySettings>
     </userSettings>
     <applicationSettings>
